--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,8 @@ services:
       - download_files:/app/downloads
       - ./yt_bot/logs:/app/logs
       - ./logs:/app/logs
+      - ./bot.log:/app/bot.log
+
 
     env_file:
       - .env
