--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     volumes:
       - .:/app
       - download_files:/app/downloads
+      - ./youtube.com_cookies.txt:/app/youtube.com_cookies.txt:ro  # ✅ Add this line
     env_file:
       - .env
     depends_on:
