--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,16 @@ services:
     depends_on:
       - youtube_db
 
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - django_static:/app/static
+    ports:
+      - "80:80"
+    depends_on:
+      - youtube_web
+
 volumes:
   postgres_data:
   django_static:
