--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,9 @@ services:
     volumes:
       - .:/app
       - download_files:/app/downloads
-      - ./cookies/youtube.com_cookies.txt:/app/cookies/youtube.com_cookies.txt:rw
-      - ./cookies/instagram.com_cookies.txt:/app/cookies/instagram.com_cookies.txt:rw
+      - ./youtube.com_cookies.txt:/app/youtube.com_cookies.txt:rw
+      - ./instagram.com_cookies.txt:/app/instagram.com_cookies.txt:rw
+      - ./tiktok.com_cookies.txt:/app/tiktok.com_cookies.txt:rw
     env_file:
       - .env
     depends_on:
